@@ -79,6 +79,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #26402: Fix XML-RPC client to retry when the server shuts down a
+  persistent connection.  This was a regression related to the new
+  http.client.RemoteDisconnected exception in 3.5.0a4.
+
 - Issue #25913: Leading ``<~`` is optional now in base64.a85decode() with
   adobe=True.  Patch by Swati Jaiswal.
 
